@@ -329,7 +329,7 @@ void PacketStreamLog::decodedStreamPacket(const uint8_t* data, size_t len,
 					  uint8_t dir, uint16_t opcode, 
 					  const EQPacketOPCode* opcodeEntry)
 {
-  if ((opcode != 0x0028) && (opcode != 0x003f) && (opcode != 0x025e))
+  //  if ((opcode != 0x0028) && (opcode != 0x003f) && (opcode != 0x025e))
     logData(data, len, dir, opcode, opcodeEntry, "[Decoded]");
 }
 
